--- a/experiments/src/main/resources/log4j.properties
+++ b/experiments/src/main/resources/log4j.properties
@@ -1,8 +1,15 @@
 # Set everything to be logged to the file /tmp/spark.log
 runtime.appender=file
 log4j.rootCategory=INFO, ${runtime.appender}
+
+log4j.logger.serialization=INFO, console
+
 log4j.appender.file=org.apache.log4j.FileAppender
 log4j.appender.file.append=true
 log4j.appender.file.file=/tmp/spark.log
 log4j.appender.file.layout=org.apache.log4j.PatternLayout
 log4j.appender.file.layout.ConversionPattern=%d{yy/MM/dd HH:mm:ss.SSS} %t %p %c{1}: %m%n
+
+log4j.appender.console=org.apache.log4j.ConsoleAppender
+log4j.appender.console.layout=org.apache.log4j.PatternLayout
+log4j.appender.console.layout.ConversionPattern=%d{yy/MM/dd HH:mm:ss.SSS} %t %p %c{1}: %m%n
